crates/rig-derive/tests/ui/custom_name/fail_name_invalid_characters.rs
#![allow(dead_code)]

use rig_derive::rig_tool;

#[rig_tool(name = "bad name!")]
fn invalid_name_characters() -> Result<String, rig_core::tool::ToolError> {
    Ok("ok".to_string())
}

fn main() {}
